Fix bug: scroll bar covering up count

--- a/CardGenerator/react-canvas-draw/src/App.css
+++ b/CardGenerator/react-canvas-draw/src/App.css
@@ -82,7 +82,7 @@
 
 .leftPanel {
     position: absolute;
-    width: 200px;
+    width: 220px;
     top: 0px;
     left: 0px;
     height: 100%;
